# slamcore-python

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  setup.py.in
.github/workflows/: ci.yml
cmake/: FindPythonPip.cmake  GetGitTagVersion.cmake
examples/: hello_world.py
slamcore_python/: __init__.py
src/: errors.cpp  logging.cpp  objects.cpp  slam.cpp  slamcore_python.cpp  subsystems.cpp  types.cpp  version.cpp
src/include/: MatrixToEigen.hpp  matrix_converter.hpp
tests/: common.py  conftest.py  test_misc.py  test_streams.py  test_subsystems.py
